<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Storage_Activity">

    <TextView android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView1" />

    <EditText android:id="@+id/inputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:lines="5"
        android:minLines="2"
        android:text="@string/inputText"
        android:layout_below="@id/textView1">
        <requestFocus />
    </EditText>

    <Button android:id="@+id/internalStorageSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputText"
        android:text="@string/internalStorageSave"/>

    <Button android:id="@+id/internalStorageGet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/internalStorageSave"
        android:text="@string/internalStorageGet"/>

    <Button android:id="@+id/externalStorageSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/internalStorageGet"
        android:text="@string/externalStorageSave"/>

    <Button android:id="@+id/externalStorageGet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/externalStorageSave"
        android:text="@string/externalStorageGet"/>

    <TextView android:id="@+id/responseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@id/externalStorageGet"/>

</RelativeLayout>
